removing StarDust.wiki because of update problem

--- a/wikibook/Makefile
+++ b/wikibook/Makefile
@@ -12,27 +12,27 @@ MDFILES=
 MDFILES+= StarDust.wiki/Home.md
 MDFILES+= StarDust.wiki/_Footer.md
 MDFILES+= DA-Hol.wiki/Home.md
-MDFILES+= DA-Hol.wiki/Deductive-Cloud.md
-MDFILES+= DA-Hol.wiki/Deductive-Smart-Contracts.md
-MDFILES+= DA-Hol.wiki/Distributed-Theory-Hierarchy.md
+MDFILES+= DA-Hol.wiki/The-DA‑Hol-Manifesto.md
+MDFILES+= DA-Hol.wiki/The-Ambition.md
+MDFILES+= DA-Hol.wiki/The-Deductive-Paradigm-Shift.md
 MDFILES+= DA-Hol.wiki/Formal-Mathematics.md
+MDFILES+= DA-Hol.wiki/Deductive-Cloud.md
 MDFILES+= DA-Hol.wiki/General-Deductive-Intelligence.md
+MDFILES+= DA-Hol.wiki/Deductive-Smart-Contracts.md
+MDFILES+= DA-Hol.wiki/The-Philosophy.md
+MDFILES+= DA-Hol.wiki/Some-Philosophical-Background.md
+MDFILES+= DA-Hol.wiki/The-Problem-and-the-Method.md
+MDFILES+= DA-Hol.wiki/Metaphysics-and-Ontology.md
+MDFILES+= DA-Hol.wiki/The-Architecture.md
+MDFILES+= DA-Hol.wiki/The-Logical-Kernel.md
+MDFILES+= DA-Hol.wiki/Distributed-Theory-Hierarchy.md
 MDFILES+= DA-Hol.wiki/HOL-for-Knowledge-Representation.md
 MDFILES+= DA-Hol.wiki/How-Deduction-Trumps-Computation.md
 MDFILES+= DA-Hol.wiki/Language-and-Logic.md
 MDFILES+= DA-Hol.wiki/Logical-Contexts.md
-MDFILES+= DA-Hol.wiki/Metaphysics-and-Ontology.md
 MDFILES+= DA-Hol.wiki/Preliminary-Discussion.md
-MDFILES+= DA-Hol.wiki/Some-Philosophical-Background.md
 MDFILES+= DA-Hol.wiki/Strategy-and-Plan.md
-MDFILES+= DA-Hol.wiki/The-Ambition.md
-MDFILES+= DA-Hol.wiki/The-Architecture.md
-#MDFILES+= DA-Hol.wiki/The-DA?Hol-Manifesto.md
-MDFILES+= DA-Hol.wiki/The-Deductive-Paradigm-Shift.md
-MDFILES+= DA-Hol.wiki/The-Logical-Kernel.md
-MDFILES+= DA-Hol.wiki/The-Philosophy.md
 MDFILES+= DA-Hol.wiki/The-Plan.md
-MDFILES+= DA-Hol.wiki/The-Problem-and-the-Method.md
 MDFILES+= DA-Hol.wiki/What-Carnap?s-Philosophy-was-not.md
 MDFILES+= DA-Hol.wiki/_Footer.md
 MDFILES+= DA-Hol.wiki/_Sidebar.md
