Mostly wiki updates + Makefile

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "wikibook/DA-Value.wiki"]
 	path = wikibook/DA-Value.wiki
 	url = https://github.com/rbjones/DA-Value.wiki
+[submodule "wikibook/StarDust.wiki"]
+	path = wikibook/StarDust.wiki
+	url = https://github.com/rbjones/StarDust.wiki
+[submodule "wikibook/SensAct.wiki"]
+	path = wikibook/SensAct.wiki
+	url = https://github.com/rbjones/SensAct.wiki
