remove submodule DA-Hol pending rename

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "wikibook/DA-Hol.wiki"]
 	path = wikibook/DA-Hol.wiki
 	url = https://github.com/rbjones/DA-Hol.wiki
-[submodule "wikibook/DA-Value.wiki"]
-	path = wikibook/DA-Value.wiki
-	url = https://github.com/rbjones/DA-Value.wiki
 [submodule "wikibook/StarDust.wiki"]
 	path = wikibook/StarDust.wiki
 	url = https://github.com/rbjones/StarDust.wiki
+[submodule "wikibook/HoLoMod.wiki"]
+	path = wikibook/HoLoMod.wiki
+	url = https://github.com/rbjones/HoLoMod.wiki
