renaming if submodules to HoLoVal and HoLoMod

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "wikibook/HoLoMod.wiki"]
 	path = wikibook/HoLoMod.wiki
 	url = https://github.com/rbjones/HoLoMod.wiki
+[submodule "wikibook/HoLoVal"]
+	path = wikibook/HoLoVal
+	url = https://github.com/rbjones/HoLoVal
+[submodule "wikibook/HoLoVal.wiki"]
+	path = wikibook/HoLoVal.wiki
+	url = https://github.com/rbjones/HoLoVal.wiki
