--- a/wikibook/Makefile
+++ b/wikibook/Makefile
@@ -21,8 +21,8 @@ MDFILES+= StarDust.wiki/Deductive-Smart-Contracts.md
 MDFILES+= StarDust.wiki/hype-cycles.md
 MDFILES+= StarDust.wiki/The-Architecture.md
 MDFILES+= StarDust.wiki/The-Strategy.md
-MDFILES+= DA-Value.wiki/Refining-and-Effecting-Value-Systems.md
-MDFILES+= SensAct.wiki/Sense,-Model,-Plan,-Action.md
+MDFILES+= HoLoVal.wiki/Refining-and-Effecting-Value-Systems.md
+MDFILES+= HoLoMod.wiki/Sense,-Model,-Plan,-Action.md
 MDFILES+= DA-Hol.wiki/Language-Truth-and-Logic.md
 MDFILES+= DA-Hol.wiki/The-Philosophy.md
 MDFILES+= DA-Hol.wiki/Some-Philosophical-Background.md
