Add SynEpis as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "wikibook/HoLoTruth.wiki"]
 	path = wikibook/HoLoTruth.wiki
 	url = https://github.com/rbjones/HoLoTruth.wiki
+[submodule "wikibook/SynEpis.wiki"]
+	path = wikibook/SynEpis.wiki
+	url = https://github.com/rbjones/SynEpis.wiki
+[submodule "wikibook/SynEpis"]
+	path = wikibook/SynEpis
+	url = https://github.com/rbjones/SynEpis
