--- a/wikibook/Makefile
+++ b/wikibook/Makefile
@@ -2,16 +2,16 @@
 # the four repositories of the StarDust constellation.
 #
 # All four project wikis are submodules of this repo.
-# The .md files from the wiki repos are converted to .tex files using pandoc.
 # A PDF suitable for publication of a book via Createspace is made using
-# a top-level tex file (StarDust.tex) which includes the individual tex
-# as required.  At present this is a book of four parts, one for each repo
-# with a preface specific to the book in the top level file. 
+# a top-level tex file (StarDust.tex) which includes the individual .md
+# files directly using the LaTeX markdown package.
+# Outputs are placed in build/ to keep submodules clean.
 #
 # To pull in changes from the submodules:
 #
 # git submodule update --recursive --remote
 
+# List of .md files needed for locmdfiles target
 MDFILES=
 MDFILES+= StarDust.wiki/The-StarDust-Constellation.md
 MDFILES+= StarDust.wiki/The-Aims-of-StarDust.md
@@ -33,12 +33,11 @@ MDFILES+= StarDust.wiki/Deductive-Smart-Contracts.md
 MDFILES+= StarDust.wiki/hype-cycles.md
 MDFILES+= StarDust.wiki/The-Architecture.md
 MDFILES+= StarDust.wiki/The-Strategy.md
-
 MDFILES+= HoLoTruth.wiki/Language-Truth-and-Logic.md
 MDFILES+= HoLoTruth.wiki/The-Philosophy.md
 MDFILES+= HoLoTruth.wiki/Some-Philosophical-Background.md
 MDFILES+= HoLoTruth.wiki/What-Carnap's-Philosophy-was-not.md
-MDFILES+= HoLoTruth.wiki/The-Problem-and-the-Method.md
+MDFILES+= HoLoTruth.wiki/The-Problem-and-The-Method.md
 MDFILES+= HoLoTruth.wiki/Preliminary-Discussion.md
 MDFILES+= HoLoTruth.wiki/Metaphysics-and-Ontology.md
 MDFILES+= HoLoTruth.wiki/The-Architecture.md
@@ -49,50 +48,27 @@ MDFILES+= HoLoTruth.wiki/HOL-for-Knowledge-Representation.md
 MDFILES+= HoLoTruth.wiki/Language-and-Logic.md
 MDFILES+= HoLoTruth.wiki/Strategy-and-Plan.md
 MDFILES+= HoLoTruth.wiki/The-Plan.md
-
 MDFILES+= HoLoMod.wiki/Sense,-Model,-Plan,-Action.md
-
 MDFILES+= HoLoVal.wiki/Refining-and-Effecting-Value-Systems.md
 
 LOCMDFILES=$(MDFILES:%=../doc/%)
+
+OUTPUT_DIR = build
+PDF = $(OUTPUT_DIR)/StarDust.pdf
 
 default:
 	@echo "StarDust wikibook makefile"
 	@echo "=========================="
 	@echo "StarDust.pdf\tmake pdf of wikibook"
 	@echo "locmdfiles\tcopy the wiki files to the docs folder for the website"
-	@echo "all\tStardust.pdf and locmdfiles"
+	@echo "all\tStarDust.pdf and locmdfiles"
 
-TEXFILES=$(MDFILES:%.md=%.tex)
-
-$(TEXFILES): %.tex: %.md
-	pandoc -f markdown -i "$*.md" -o "$@"	\
-		--number-sections        	\
-		--pdf-engine=xelatex
-
-cleantexs:
-	-rm $(TEXFILES)
-
-#StarDust.tex: StarDust.md header.tex includebefore.tex
-#	pandoc -f markdown -i StarDust.md -o StarDust.tex -s	\
-#		--toc --toc-depth=4 --number-sections        	\
-#		--latex-engine=xelatex				\
-#		-V documentclass=book	\
-#		-V fontsize=10pt	\
-#		-V title="{\\bf StarDust}\\\\ \\ \\\\ {\\Large Cosmic Cognitive Architecture}"	\
-#		-V subtitle="Cosmic Cognitive Architecture" \
-#		-V author="Roger Bishop Jones" \
-#		-V geometry:"twoside,paperwidth=5in,paperheight=8in,hmargin={0.75in,0.5in},vmargin={0.5in,0.5in},includehead,includefoot" \
-#		-V meta-json="author='Roger Bishop Jones'" \
-#		--data-dir=. \
-#		-H header.tex \
-#		--include-before=includebefore.tex
-
-StarDust.pdf: StarDust.tex sdhead.tex $(TEXFILES)
-	xelatex StarDust
-	xelatex StarDust
-	xelatex StarDust
-	cp StarDust.pdf ../docs
+$(PDF): StarDust.tex sdhead.tex
+	mkdir -p $(OUTPUT_DIR)
+	lualatex -output-directory=$(OUTPUT_DIR) StarDust
+	lualatex -output-directory=$(OUTPUT_DIR) StarDust
+	lualatex -output-directory=$(OUTPUT_DIR) StarDust
+	cp $(PDF) ../docs
 
 locmdfiles: $(MDFILES)
 	rm -rf ../docs/*.wiki
@@ -100,4 +76,7 @@ locmdfiles: $(MDFILES)
 	rm ../docs/*.wiki/.git
 	touch locmdfiles
 
-all: StarDust.pdf locmdfiles
+clean:
+	rm -rf $(OUTPUT_DIR)/*
+
+all: $(PDF) locmdfiles
